# calligraphy_2020

./: Basis.h  CMakeLists.txt  CalligraphyBasis.cpp  CalligraphyBasis.h  CalligraphyPseudoSpectral.h  Canvas.cpp  Canvas.h  Chebyshev2.h  DynamicBrushState.h  DynamicVirtualBrush.h  Parameters.h  README.md  SimpleVirtualBrush.h  VirtualBrush.h  draw_fitting.py  file_io.cpp  file_io.h  find_poly_node.py  fit_vb_parameters_0223.py  line_measurement_2020_02_23.txt  parameters.yaml  showSkeleton.py  show_canvas.py  show_z.py  showmatrix.py  utils_node.py
Generated_data_file/: Final_coeff_9E1F.txt  Sample_points_4E00.txt  Sample_points_4E7F.txt  Sample_points_77F3.txt  Sample_points_9648.txt  Sample_points_9673.txt  Sample_points_9E1F.txt  coeff_cheby_sample.txt  ori_picture.txt  showOri.py
VisualizePixelDifference/: CMakeLists.txt  CppUnitTestFramework.hpp  README.md
VisualizePixelDifference/Data/scanner_original_scanned/: brightness.py
VisualizePixelDifference/ImageOverlaying/: imageResizer.py  overlaySvgSimulated.py  overlaySvgWritten.py
VisualizePixelDifference/src/: PixelDifference.cpp  PixelDifferenceMethods.cpp  PixelDifferenceMethods.h  PixelDifferenceMethods.h.in
VisualizePixelDifference/test/: TestPixelDifferenceMain.cpp  TestPixelDifferenceTests.cpp
scripts/: CMakeLists.txt  sen01_dynamic_initial.cpp  sen02_simple_initial.cpp  sen03_simple_optimize.cpp  sen04_dynamic_optimize.cpp
